Memory leak in Material properties: "Data from SCE" #78608

Closed
opened 2020-07-04 17:40:39 +02:00 by Ankit Meel · 4 comments
Member

System Information
Operating system: macOS 10.14
Graphics card: Intel HD 6000

Blender Version
3a59c184b9 is the first bad commit
CC @mont29

Short description of error

Error: Not freed memory blocks: 11, total unfreed memory 9.007629 MB
Data from SCE len: 128 0x6000077022b8
Data from SCE len: 528384 0x125347038
Data from SCE len: 3145728 0x1253c9038
Data from SCE len: 160 0x600003b383b8
Data from SCE len: 786432 0x125715038
Data from SCE len: 196608 0x11ee71038
Data from SCE len: 49152 0x11f3e4038
Data from SCE len: 12288 0x1065a2a38
Data from SCE len: 3072 0x1065a5c38
Data from SCE len: 320 0x123f5e5e8
Data from SCE len: 320 0x123f84738

Exact steps for others to reproduce the error
On default cube, open material properties.
close blender.

**System Information** Operating system: macOS 10.14 Graphics card: Intel HD 6000 **Blender Version** 3a59c184b9 is the first bad commit CC @mont29 **Short description of error** ``` Error: Not freed memory blocks: 11, total unfreed memory 9.007629 MB Data from SCE len: 128 0x6000077022b8 Data from SCE len: 528384 0x125347038 Data from SCE len: 3145728 0x1253c9038 Data from SCE len: 160 0x600003b383b8 Data from SCE len: 786432 0x125715038 Data from SCE len: 196608 0x11ee71038 Data from SCE len: 49152 0x11f3e4038 Data from SCE len: 12288 0x1065a2a38 Data from SCE len: 3072 0x1065a5c38 Data from SCE len: 320 0x123f5e5e8 Data from SCE len: 320 0x123f84738 ``` **Exact steps for others to reproduce the error** On default cube, open material properties. close blender.
Author
Member

Added subscribers: @mont29, @ankitm

Added subscribers: @mont29, @ankitm
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Ankit Meel changed title from Memory leak in Material preview: "Data from SCE" to Memory leak in Material properties: "Data from SCE" 2020-07-04 23:58:55 +02:00
Bastien Montagne self-assigned this 2020-07-06 14:34:00 +02:00

This issue was referenced by 0b07f9b717

This issue was referenced by 0b07f9b71738c59b3834e2fc8b19779c72b3b020

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78608
No description provided.