source/blender/blenkernel/intern/image.c
@@ -195,24 +195,24 @@ static void image_foreach_cache(ID *id,
       .offset_in_ID = offsetof(Image, cache),
       .cache_v = image->cache,
   };
-  function_callback(id, &key, (void **)&image->cache, user_data);
+  function_callback(id, &key, (void **)&image->cache, 0, user_data);
 
   for (int eye = 0; eye < 2; eye++) {
     for (int a = 0; a < TEXTARGET_COUNT; a++) {
       key.offset_in_ID = offsetof(Image, gputexture[a][eye]);
       key.cache_v = image->gputexture[a][eye];
-      function_callback(id, &key, (void **)&image->gputexture[a][eye], user_data);
+      function_callback(id, &key, (void **)&image->gputexture[a][eye], 0, user_data);
     }
   }
 
   key.offset_in_ID = offsetof(Image, rr);
   key.cache_v = image->rr;
-  function_callback(id, &key, (void **)&image->rr, user_data);
+  function_callback(id, &key, (void **)&image->rr, 0, user_data);
 
   LISTBASE_FOREACH (RenderSlot *, slot, &image->renderslots) {
     key.offset_in_ID = (size_t)BLI_ghashutil_strhash_p(slot->name);
     key.cache_v = slot->render;
-    function_callback(id, &key, (void **)&slot->render, user_data);
+    function_callback(id, &key, (void **)&slot->render, 0, user_data);
   }
 }
 
